update input notes functionality

--- a/Projects/Calendar/index.html
+++ b/Projects/Calendar/index.html
@@ -35,7 +35,7 @@
 			<div id="calendar-notes">
 				<div id="calendar-notes-items"></div>
 				<input id="note-input" placeholder="Write a new note." />
-				<button onclick="addNote()">Add a note</button>
+				<button onclick="addNote()" id="note-button">Add a note</button>
 			</div>
 		</div>
 		<div id="background-wrap">
