styled calendar-notes and calendar-add-notes blocks

--- a/Projects/Calendar/index.html
+++ b/Projects/Calendar/index.html
@@ -34,9 +34,12 @@
 			</table>
 			<div id="calendar-notes">
 				<div id="calendar-notes-items"></div>
-				<input id="note-input" placeholder="Write a new note." />
-				<button onclick="addNote()" id="note-button">Add a note</button>
 			</div>
+		</div>
+		<div id="calendar-add-note">
+			<h2>Write a note</h2>
+			<input id="note-input" placeholder="Write a new note." />
+			<button onclick="addNote()" id="note-button">Add a note</button>
 		</div>
 		<div id="background-wrap">
 			<div class="bubble x1"></div>
